; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_fid.c_mlxsw_sp_fid_port_vid_map.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_fid.c_mlxsw_sp_fid_port_vid_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp_fid = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { {}* }
%struct.mlxsw_sp_port = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlxsw_sp_fid_port_vid_map(%struct.mlxsw_sp_fid* %0, %struct.mlxsw_sp_port* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlxsw_sp_fid*, align 8
  %6 = alloca %struct.mlxsw_sp_port*, align 8
  %7 = alloca i32, align 4
  store %struct.mlxsw_sp_fid* %0, %struct.mlxsw_sp_fid** %5, align 8
  store %struct.mlxsw_sp_port* %1, %struct.mlxsw_sp_port** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %5, align 8
  %9 = getelementptr inbounds %struct.mlxsw_sp_fid, %struct.mlxsw_sp_fid* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = bitcast {}** %13 to i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)**
  %15 = load i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)*, i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)** %14, align 8
  %16 = icmp ne i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)* %15, null
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  %19 = call i64 @WARN_ON(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %37

24:                                               ; preds = %3
  %25 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %5, align 8
  %26 = getelementptr inbounds %struct.mlxsw_sp_fid, %struct.mlxsw_sp_fid* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = bitcast {}** %30 to i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)**
  %32 = load i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)*, i32 (%struct.mlxsw_sp_fid*, %struct.mlxsw_sp_port*, i32)** %31, align 8
  %33 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %5, align 8
  %34 = load %struct.mlxsw_sp_port*, %struct.mlxsw_sp_port** %6, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 %32(%struct.mlxsw_sp_fid* %33, %struct.mlxsw_sp_port* %34, i32 %35)
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %24, %21
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i64 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
